--- a/style.css
+++ b/style.css
@@ -5,14 +5,134 @@
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-}
-
-
-h2 {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    background: url('https://i.redd.it/c3uhsgo1vx541.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #08152d;
 }
 
+
+#site-header {
+    padding: 30px;
+    color: white
+}
+
+#temp-div {
+    position: absolute;
+    top: 44%;
+    left: 12%;
+}
+
+#temp-label {
+    position: absolute;
+
+    bottom: 79%;
+    font-size: 20px;
+}
+
+#start-temp {
+    font-size: 50px
+}
+
+#temp-dropper {
+    position: absolute;
+    transform: rotate(270deg);
+    height: 20px;
+    width: auto;
+    left: 110%;
+    top: 40%;
+    cursor: pointer;
+    opacity: 0.4;
+}
+
+#temp-dropper:hover {
+    opacity: 1;
+}
+
+#temp-dropdown {
+    position: absolute;
+    width: 200px;
+    background-color: rgba(0, 0, 0, 0.542);
+    border-radius: 20px;
+    height: 100px;
+    top: -20%;
+    left: -95%;
+    display: none
+}
+
+.drop {
+    position: relative;
+    top: 16%;
+    left: 10%;
+    width: 160px;
+}
+
+#city {
+    font-size: 26px;
+    position: relative;
+    bottom: 15px;
+    left: 7px
+}
+
+#date {
+    font-size: 16px;
+    position: relative;
+    bottom: 18px;
+    left: 8px
+}
+
+h2 {
+    font-size: 50px;
+}
+
+p {
+    color: white;
+}
+
+#weather-icon {
+    width: 50px;
+    height: auto
+}
+
+div {
+    color:white;
+}
+
+.current {
+    padding: 30px;
+    color: white
+}
+
+#search-div {
+    position: absolute;
+    top: 90%;
+    right: 37%;
+    height: 10px;
+}
+
+#weather-div {
+    text-align: center;
+    padding: 1%;
+    position: absolute;
+    background: linear-gradient(to top, rgba(24, 72, 84, 0.859) 0%,rgba(68, 190, 221, 0.859) 100%);
+    height: 110px;
+    width: 110px;
+    border-radius: 100%;
+    top: 5%;
+    right: 5%;
+}
+
+
+#test-border {
+    position: relative;
+    display: flex;
+    height: 400px;
+    width: 800px;
+    background-color: rgba(0, 0, 0, 0.803);
+    margin: 2%;
+    border-radius: 40px;
+}
