--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
     top: 40%;
     cursor: pointer;
     opacity: 0.4;
+    z-index: 1;
 }
 
 #temp-dropper:hover {
@@ -57,11 +58,46 @@ body {
     position: absolute;
     width: 200px;
     background-color: rgba(0, 0, 0, 0.542);
-    border-radius: 20px;
+    border-radius: 10px;
     height: 100px;
     top: -20%;
-    left: -95%;
-    display: none
+    left: -90%;
+    opacity: 0
+}
+
+#hourly-dropper {
+    position: relative;
+    height: 20px;
+    width: 200px;
+    top: 110%;
+    left: 40%;
+    cursor: pointer;
+    opacity: 0.8;
+    background-color: rgba(16, 16, 16, 0.803);
+    border-radius: 5px;
+    z-index: 2;
+}
+
+#hourly-dropper:hover {
+    opacity: 1;
+}
+
+#hourly-dropdown {
+    position: relative;
+    display: flex;
+    height: 400px !important;
+    width: 800px !important;
+    background-color: rgba(16, 16, 16, 0.803);
+    margin: 2%;
+    border-radius: 40px;
+    z-index: -2;
+    opacity: 0;
+}
+
+#hourly-dropdown-div {
+    position: relative;
+    left: -34.33%;
+    top: -10%
 }
 
 .drop {
@@ -112,6 +148,7 @@ div {
     top: 90%;
     right: 37%;
     height: 10px;
+    z-index: 5;
 }
 
 #weather-div {
@@ -136,3 +173,4 @@ div {
     margin: 2%;
     border-radius: 40px;
 }
+
